[package]

name = "gallium"
version = "0.0.1"
authors = ["Charlie Cummings <chc4000@gmail.com>"]

[dependencies.xlib]
git = "https://github.com/servo/rust-xlib.git"

[dependencies.rustc-serialize]
rustc-serialize = "0.2.8"

[dependencies.log]
log = "*"

[dependencies]
bitflags = "0.1"

[[bin]]
name = "gallium"
